# inat2wiki

./: .gitignore  README.md  app.py  candidates.json  list_user_observations  list_user_observations.py  log.txt  parse_observation  parse_observation.py  requirements.txt  setup.cfg  upload_audio
batch_upload/: batch_upload.py  uploaded_photos_cache.json
inat2wiki/: get_user_observations.py  inat_taxon2wikidata.py  parse_observation.py  wikidata.py
inat2wiki.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: cli.py
src/flask/: app.py  log.txt  requirements.txt
src/flask/templates/: index.html  layout.html  observation_table.html  parse.html  projectlist.html  ptwikistub.html  userlist.html
src/inat2wiki/: cli.py  get_all_observations.py  get_user_observations.py  inat_taxon2wikidata.py
src/inat2wiki.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pynaturalist2commons/: cli.py  get_all_observations.py  parse_observation.py  upload_audio_to_commons
src/pynaturalist2commons.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/results/: candidates_limarrudandre.json  candidates_ramarese.json  candidates_tiagolubiana.json
templates/: index.html  layout.html  search.html
www/inat2wiki.egg-info/: entry_points.txt
www/python/src/: app.py  requirements.txt
www/python/src/templates/: 404.html  500.html  about.html  index.html  layout.html  observation_table.html  parse.html  projectlist.html  ptwikistub.html  wikidata.html  wikistub.html
