[metadata]
name = inat2wiki
version = 0.0.1
description = Collection of functions to move stuff from iNaturalist to Wikidata.
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_file = LICENSE

[options]
install_requires =
    flask
    Flask-Session
    requests
zip_safe = false
include_package_data = true

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src


[options.extras_require]
tests =
    pytest

[options.entry_points]
console_scripts =
    pynat = inat2wiki.cli:cli

[mypy]
plugins = pydantic.mypy